# DeepGriffinLim

./: clear_outputs.py  pyproject.toml
src/: config.yaml  dataset.py  dynamic_GPU_allocation.py  hyperparameter.py  main.py  model.py  test.py  train.py  utils.py
src/tests/runs/debug_run/: events.out.tfevents.1697017055.Lucas-MBP.47998.0  events.out.tfevents.1697017109.Lucas-MBP.48128.0  events.out.tfevents.1697017528.Lucas-MBP.48820.0  events.out.tfevents.1697017627.Lucas-MBP.48996.0  events.out.tfevents.1697017722.Lucas-MBP.49188.0  events.out.tfevents.1697017997.Lucas-MBP.49686.0  events.out.tfevents.1697018474.Lucas-MBP.50486.0  events.out.tfevents.1697018964.Lucas-MBP.51254.0  events.out.tfevents.1697036451.Lucas-MacBook-Pro.local.69878.0
