[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.1"
torch = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
ipykernel = "^6.23.1"
jupyter = "^1.0.0"
torchvision = "^0.15.2"
tqdm = "^4.65.0"
scipy = "^1.10.1"
librosa = "^0.10.0.post2"
torchshow = "^0.5.0"
einops = "^0.6.1"
torchaudio = "^2.0.2"
llvmlite = "^0.40.1"
setuptools = "^68.0.0"
tensorboard = "^2.13.0"
torch-tb-profiler = "^0.4.1"
albumentations = "^1.3.1"
pytorch-complex = {git = "https://github.com/soumickmj/pytorch-complex", branch = "main"}
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
